stable-backend/api/deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: 2482569sproject
spec:
  selector:
    app: api
  ports:
    - name: api-port
      port: 8082
      protocol: TCP
      targetPort: 8082
